# naive-data-parallel

./: README.md  pyproject.toml
configs/: llama_default.json  llama_large.json  wandb_default.json
scripts/: setup_data_volume.py  train_modal.py
sillydp/: main.py
sillydp/data_parallel/: data_parallel.py
sillydp/training_utils/: utils.py
