[project]
name = "sillydp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=3.24.0",
    "datasets>=4.1.1",
    "modal>=1.1.4",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "wandb>=0.22.0",
]
